--- a/Index.css
+++ b/Index.css
@@ -49,6 +49,24 @@
     margin-top: 5px;
     border: 2px solid none;
   }
+  .close:hover {
+    opacity: 1;
+  }
+  .close:before, .close:after {
+    position: absolute;
+    left: 0px;
+    content: ' ';
+    height: 23px;
+    width: 2px;
+    background-color: #333;
+  }
+  .close:before {
+    transform: rotate(45deg);
+  }
+  .close:after {
+    transform: rotate(-45deg);
+  }
+  
 .btn{
   z-index: 1;
   transition: 0.4s;
