--- a/Assignment/Index.css
+++ b/Assignment/Index.css
@@ -2,7 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400&display=swap');
 
 :root{
-  --main-color: #853a3a;
+  --main-color: #213b4a;
+  --second-color: #98d9ff;
 }
 
 *{
@@ -14,21 +15,33 @@ body{
 /*background-color: #4a3c98;
 background-image: linear-gradient(62deg, #4a3c98 0%, #ffffff 100%);
 */
+background-image: url(Pictures/2010.i123.005..car\ headlights\ AD\ composition.jpg);
+height: 100%;
+
+/* Center and scale the image nicely */
+background-position: center;
+background-repeat: no-repeat;
+background-size: cover;
+color: white;
 }
 .container{
   font-family: 'Poppins', sans-serif;
-  height: 100vh;
+  min-height: 100vh;
+  text-align: end;
 }
 .header{
   display: flex;
   justify-content: space-between;
   background-color: white;
   box-shadow: 1px 10px 15px #0000000a;
-  position: sticky;
+  position: fixed;
+  top: 0;
+  z-index: 99;
+  width: 100%;
 }
 .nav-container ul{
   display: flex;
-  margin-top: 15px;
+  margin-top: 13px;
   justify-content: space-between;
 }
 .nav-container ul li{
@@ -47,7 +60,7 @@ background-image: linear-gradient(62deg, #4a3c98 0%, #ffffff 100%);
 .nav-container ul li a:hover{
   border-bottom: 2px solid var(--main-color);
   border-top: 2px solid var(--main-color);
-  padding: 15px;
+  
 }
 .logo{
   color: black;
@@ -68,12 +81,17 @@ background-image: linear-gradient(62deg, #4a3c98 0%, #ffffff 100%);
 }
 
 /*Main*/
-.section1{
-  margin: 200px 0px 0px 100px;
-  height: 60vh;
+.section{
+  height: 80vh;
+  Display: flex;
+  justify-content: center;
+  align-items: center;
 }
+.section1{
+  margin: 55px;
+}
+
 .moto{
-  color: black;
   letter-spacing: 1px;
 }
 .moto-0{
@@ -81,7 +99,7 @@ background-image: linear-gradient(62deg, #4a3c98 0%, #ffffff 100%);
 }
 .moto-1{
   font-size: 40px;
-  color: var(--main-color);
+  color: var(--second-color);
 }
 .rev{
   position: relative;
@@ -96,15 +114,15 @@ background-image: linear-gradient(62deg, #4a3c98 0%, #ffffff 100%);
   left: 0px;
   background-color: var(--main-color);
 }
-.sub-moto{
+.sub-moto p{
   font-size: 15px;
   margin-bottom: 20px;
-  width: 60%;
   line-height: 1.8;
+  width: 40%;
+  margin-left: auto;
+  text-align: end;
 }
-.register-button{
-  
-}
+
 
 .btn{
   background-color: var(--main-color);
@@ -184,3 +202,65 @@ background-image: linear-gradient(62deg, #4a3c98 0%, #ffffff 100%);
   background-color: green;
   flex: 1;
 }
+
+
+/*SectionA2*/
+.sectionA2{
+  flex-direction: column;
+}
+.card-container-A2{
+  color: rgb(0, 0, 0);
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  align-items: center;
+  min-height: 60vh;
+  justify-content: center;
+  
+}
+
+.heading h1{
+  margin: 2cm 0px 2.5cm 50px;
+  font-size: 50px;
+  color: var(--Second-color);
+}
+.h2-1{
+  width: 70%;
+}
+.h2-2{
+  width: 40%;
+  margin-left: auto;
+}
+.card1-A2, .card2-A2{
+  display: flex;
+  width: 100%;
+  flex: 1;
+  margin: 
+}
+
+.card1-pic, .card2-pic, .card1-content, .card2-content{
+  flex: 1;
+}
+.card1-content, .card2-content{
+  text-align: center;
+  margin-top: 30px;
+}
+.card1-content p{
+  margin-top: 1cm;
+}
+.car-pic{
+  width: 300px;
+  height: 200px;
+}
+.card1-pic img{
+  margin-left: 2cm;
+}
+.card2-pic img{
+  width: 400px;
+  margin-bottom: 4cm;
+}
+.card1-content, .card2-content p{
+
+}
+/*FOOTER*/
+
