--- a/Assignment/Index.css
+++ b/Assignment/Index.css
@@ -2,8 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400&display=swap');
 
 :root{
-  --main-color: #213b4a;
-  --second-color: #98d9ff;
+  --main-color: #5cc7cc;
+  --second-color: #cdfbff;
 }
 
 *{
@@ -67,7 +67,7 @@ body{
   Display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url(Pictures/2010.i123.005..car\ headlights\ AD\ composition.jpg);
+  background-image: url(Pictures/larry.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -148,7 +148,6 @@ body{
   color: white;
 }
 
-
 /* =========================REGISTER========================== 2 */
 
 .section-2{
@@ -161,7 +160,7 @@ body{
   text-align: start;
 }
 .overlay{
-  background-color: rgba(0,0,0,0.8);
+  background-color: rgb(13 27 28 / 82%);
   width: 100%;
   height: 100%;
   display: flex;
@@ -184,8 +183,11 @@ body{
   display: flex;
   width: 100%;
   font-size: 30px;
-  font-weight: bold;
+  font-weight: 600;
   justify-content: center;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  color: var(--second-color);
 }
 .card-container{
   display: flex;
@@ -217,11 +219,25 @@ body{
 }
 .buy-container p, .sell-container p{
   margin-bottom: 15px;
+  max-width: 60ch;
   font-size: 14px;
 }
 .btn-buy, .btn-sell{
   padding: 10px 45px;
   margin: 10px;
+}
+
+
+/*=======================SECTION3========================*/
+.section3{
+  margin-top: 2.8cm;
+  font-size: 2rem;
+}
+.section3-card-container{
+  max-width: 80%;
+  margin: auto;
+  color: black;
+
 }
 
 
@@ -242,25 +258,124 @@ body{
 /*=========================Registration FORM==================*/
 
 .form-container{
+  /* background-image: url(Pictures/barry.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: -1; */
   display: flex;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
+
 }
-.form-card-container{
+.forms-container-inner{
+  position: relative;
+  width: 30%;
+  height: 77vh;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+}
+/*.forms-container-inner:hover{
+  transform: rotateY(180deg);
+}*/
+.back-box, .front-box{
+   -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+}
+.front-box{
+
+}
+.back-box{
+  transform: rotateY(180deg);
+}
+.form-card-container-front, .form-card-container-back{
   display: flex;
   justify-content: center;
+  min-height: 75vh;
   align-items: center;
-  width: 40%;
-  min-height: 80vh;
+  flex-direction: column;
   margin: auto;
   background-color: rgba(0,0,0,0.4);
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
+.form-card-container-back h1{
+  margin: 13px;
+}
+.form-card-container-back form{
+  width: 75%;
+  margin: auto;
+}
+.form-card-container-front h1{
+  margin: 20px;
+}
+.form-card-container-front form{
+  width: 75%;
+}
+.input-box input{
+  padding: 5px;
+  width: 100%;
+  border: none;
+  background-color: transparent;
+  border-bottom: 2px solid white;
+  color: white;
+  margin-bottom: 10px;
+}
+.input-box input:focus{
+  outline: none;
+}
+.input-box input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
 
+input[type=submit] {
+  width: 100%;
+  background-color: var(--main-color);
+  color: white;
+  padding: 14px 20px;
+  margin: 25px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+}
+form h6{
+  text-align: center;
+  font-size: 12px;
+  font-weight: normal;
+  margin-bottom: 12px;
+}
 .back-btn{
   position: absolute;
   top: 0;
   left: 0;
+  padding: 10px;
+  margin: 5px;
+  background-color: var(--main-color);
+  color: white;
+  border-radius: 8px;
+  border: none;
+}
+.btn-register{
+  padding: 10px;
+  margin: 5px;
+  background-color: var(--main-color);
+  color: white;
+  border-radius: 8px;
+  border: none;
+
+}
+.btn-login{
+  padding: 10px;
+  margin: 5px;
+  background-color: var(--main-color);
+  color: white;
+  border-radius: 8px;
+  border: none;
 }
