--- a/Assignment/Index.css
+++ b/Assignment/Index.css
@@ -46,6 +46,7 @@ body{
 }
 .nav-container ul li a:hover{
   border-bottom: 2px solid var(--main-color);
+  color: var(--main-color)
 }
 .logo{
   color: black;
@@ -156,11 +157,11 @@ body{
   background-repeat: no-repeat;
   background-size: cover;
   z-index: -1;
-  height: 81vh;
+  height: 89vh;
   text-align: start;
 }
 .overlay{
-  background-color: rgb(13 27 28 / 82%);
+  background-color: rgba(0, 0, 0, 0.82);
   width: 100%;
   height: 100%;
   display: flex;
@@ -168,6 +169,7 @@ body{
   align-items: center;
 }
 .blur-container{
+  background-color: rgba(255, 255, 255, 0.158);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -192,13 +194,13 @@ body{
 .card-container{
   display: flex;
   justify-content: center;
-  margin: 2cm 1cm 0cm 1cm;
+  margin: 1cm 1cm 1cm 1cm;
   max-width: 60%;
 }
 .sell-container{
   margin-right: 2rem;
-  background-color: #ffffff90;
-  color: black;
+  background-color: #000000bf;
+  color: white;
   padding: 20px;
   border-radius: 10px;
 }
@@ -206,8 +208,8 @@ body{
   margin-left: 2rem;
   padding: 20px;
   border-radius: 10px; 
-  background-color: #ffffff90;
-  color: black;
+  background-color: #000000bf;
+  color: white;
 }
 .icon{
   font-size: 30px;
@@ -378,4 +380,29 @@ form h6{
   color: white;
   border-radius: 8px;
   border: none;
+}
+.search-bar-container{
+  margin: 20px;
+}
+.search-bar-container input{
+  padding: 5px 8rem 5px 5px;
+  border: 2px solid var(--main-color);
+  border-right: none;
+}
+.search-bar-container input:focus{
+  color: black;
+  border: 2px solid var(--main-color);
+  outline: none;
+}
+.search-bar-container button{
+  padding: 5px 3px 5px 3px;
+  background-color: var(--main-color);
+  color: white;
+  border: 2px solid var(--main-color);
+  transition: 0.4s;
+  border-left: none;
+}
+.search-bar-container button:hover{
+  color: var(--main-color);
+  background-color: white;
 }
