--- a/Assignment/Index.css
+++ b/Assignment/Index.css
@@ -157,16 +157,36 @@ body{
   background-repeat: no-repeat;
   background-size: cover;
   z-index: -1;
-  height: 89vh;
-  text-align: start;
+  height: 93vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+
 .overlay{
   background-color: rgba(0, 0, 0, 0.82);
   width: 100%;
   height: 100%;
+}
+.slider{
+  width: 80%;
+  text-align: center;
+  overflow: hidden;
+  margin: auto;
+}
+.slides{
   display: flex;
-  justify-content: center;
-  align-items: center;
+  overflow-x: hidden;
+  scroll-snap-type: x mandatory;
+  scroll-behavior: smooth;
+  -webkit-overflow-scrolling: touch;
+}
+.slides > div{
+  flex-shrink: 0;
+  width: 100%;
+  transform-origin: center center;
+  transform: scale(1);
+  transition: transform 0.5s;
 }
 .blur-container{
   background-color: rgba(255, 255, 255, 0.158);
@@ -174,13 +194,29 @@ body{
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  width: 80%;
   margin: auto;
   text-align: center;
   margin-top: 3.8rem;
   padding: 20px;
   border-radius: 20px;
 }
+.sliding-section{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin: auto;
+  text-align: center;
+  margin-top: 3.8rem;
+  padding: 20px;
+  border-radius: 20px;
+}
+.inner-container{
+  padding: 20px;
+  background-color: #000000bf;
+  border-radius: 15px;
+}
+
 .service-moto{
   display: flex;
   width: 100%;
@@ -234,12 +270,164 @@ body{
 .section3{
   margin-top: 2.8cm;
   font-size: 2rem;
-}
-.section3-card-container{
-  max-width: 80%;
-  margin: auto;
   color: black;
+}
 
+
+
+
+ul{
+  margin: 0;
+  padding: 0;
+}
+ul li{
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.wrapper{
+  width: 840px;
+  margin: 0 auto;
+  height: 1200px;
+}
+.vehicle-card{
+  position: relative;
+  display: inline-block;
+  width: 240px;  
+  height: 335px;
+  overflow: visible;
+  z-index: 1;
+  border-radius: 2px;
+  margin: 0 20px 20px 0;
+}
+
+.vehicle-card:hover {
+  z-index: 2;
+  -webkit-transform: translate(0px, -10px);
+  transform: translate(0, -10px);
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+  -webkit-transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+
+.vehicle-card .details{
+  position: absolute;
+  height: 335px;
+  width: 240px;
+  overflow: hidden;
+  background-color: #fff;
+  box-shadow: 0 0px 5px rgba(0, 0, 0, 0.3);
+}
+
+.vehicle-card .details:hover{
+  -webkit-transition: all .3s cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: all .3s cubic-bezier(0.165, 0.84, 0.44, 1);
+  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
+  height: 490px;
+  width: 240px;
+}
+.vehicle-card .info{
+  margin: 10px;
+}
+.vehicle-card .ctas{
+  margin: 10px 0;
+}
+.thumb-gallery{
+  height: 150px;
+}
+.thumb-gallery img{
+  position: absolute; 
+  width: 240px;
+}
+.thumb-gallery img.first{
+  opacity: 1;
+}
+.vehicle-card:hover .thumb-gallery img.second{
+  opacity: 0;
+  -webkit-transition: all .3s cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: all .3s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+/*styling*/
+
+.vehicle-card h3{
+  margin: 0;
+  font-family: "Roboto Condensed", Helvetica, Arial, sans-serif;
+  font-size: 1.5rem;
+  letter-spacing: -.5px;
+}
+.vehicle-card .price span{
+  font-family: "Helvetica", Arial, sans-serif;
+  color: #999;
+  font-size: .75rem;
+}
+.vehicle-card .price h4{
+  margin: 0;
+  font-family: "Roboto Condensed", Helvetica, Arial, sans-serif;
+  color: #222;
+  font-size: 1.25rem;
+}
+.vehicle-card .desc p{
+  color: #666;
+  font-size: 1rem;
+  line-height: 1.25rem;
+}
+.vehicle-card .specs{
+  border-top: 1px solid #dadada;
+  border-bottom: 1px solid #dadada;
+  margin: 20px 0;
+  padding: 10px 0;  
+}
+.specs .spec{
+  display: inline-block;
+  margin-right: 10px;
+}
+.specs span{
+  color: #999;
+  font-size: .75rem;
+}
+.specs p{
+  font-size: 1rem;
+  font-weight: bold;
+  margin: 0;
+}
+.specs p span{
+  font-size: .75rem;
+  margin-left: 2px;
+  font-weight: normal;
+}
+.btn-car{
+  display: block;
+  padding: 0 10px;
+  float: left;
+  font-size: .75rem;
+  text-decoration: none;
+  height: 30px;
+  width: 101px;
+  text-align: center;
+  border-radius: 2px;
+  font-weight: bold;  
+  -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+  -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+  box-sizing: border-box;         /* Opera/IE 8+ */
+}
+.heading h1{
+  text-align: center;
+  padding: 20px;
+  margin-bottom: 0.2cm;
+}
+.primary{
+  background-color: #1383b3;
+  color: #fff;
+  margin-right: 10px;
+  line-height: 30px;
+}
+.secondary{
+  background-color: #fff;
+  color: #1383b3;
+  border: 2px solid #1383b3;  
+  line-height: 26px;
 }
 
 
@@ -406,3 +594,5 @@ form h6{
   color: var(--main-color);
   background-color: white;
 }
+
+
