--- a/Assignment/Index.css
+++ b/Assignment/Index.css
@@ -61,7 +61,10 @@ body{
   fill: var(--main-color);
   width: 3em;
 }
-
+.logo a{
+  text-decoration: none;
+  color: black;
+}
 
 /*Main*/
 .main-container{
@@ -599,3 +602,31 @@ form h6{
 }
 
 
+/*====================ABOUT=================*/
+.about-container{
+  color: black;
+  max-width: 80%;
+  margin: auto;
+}
+.about-section-1{
+  display: flex;
+  margin-top: 2cm;
+  padding-top: 2cm;
+}
+.details{
+  flex: 1;
+}
+.details h1{
+  font-size: 50px;
+}
+.details p{
+  font-size: 20px;
+  max-width: 50ch;
+}
+.contact{
+  font-weight: 700;
+  font-size: 22px !important;
+}
+.about-image{
+  flex: 1;
+}
