--- a/Assignment/Index.css
+++ b/Assignment/Index.css
@@ -65,6 +65,7 @@ body{
 .logo a{
   text-decoration: none;
   color: black;
+  font-family: 'Dancing Script', cursive;
 }
 
 /*Main*/
@@ -421,14 +422,23 @@ ul li{
   color: #fff;
   margin-right: 10px;
   line-height: 30px;
+  transition: 0.3s;
+}
+.primary:hover{
+  color: var(--main-color);
+  background-color: white;
 }
 .secondary{
   background-color: #fff;
   color: var(--main-color);
   border: 2px solid var(--main-color);  
   line-height: 26px;
+  transition: 0.3s;
 }
-
+.secondary:hover{
+  color: white;
+  background-color: var(--main-color);
+}
 
 /*=======================FOOTER=========================*/
 
@@ -554,6 +564,7 @@ form h6{
   font-weight: normal;
   margin-bottom: 12px;
 }
+
 .back-btn{
   position: absolute;
   top: 0;
@@ -694,7 +705,7 @@ form h6{
   flex-direction: column;
   align-items: center;
   margin: 15px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.2);
   border-radius: 16px;
 }
 .team-card img{
